Intergrate sb/, smoke/ to dashboard and floor detail update pagination for Devices list in iot/ page. Add refresh rate at 5 minutes
